--- a/css/main.scss
+++ b/css/main.scss
@@ -14,7 +14,7 @@ $spacing-unit:     30px;
 
 $text-color:       #333;
 $background-color: #fdfdfd;
-$brand-color:      #94ecdf;
+$brand-color:      #ffa3a1;
 
 $grey-color:       #828282;
 $grey-color-light: lighten($grey-color, 40%);
