--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -3,6 +3,7 @@ layout: default
 ---
 <h1 class="post-headline">{{page.title}}</h1>
 <p class="meta"><small>{{page.date | date: '%B %d, %Y'}}</small></p>
+<p class="meta"><small>{{page.categories}</small></p>
 
 {{content}}
 
