--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,8 +2,10 @@
 layout: default
 ---
 <h1 class="post-headline">{{page.title}}</h1>
-<p class="meta"><small>{{page.date | date: '%B %d, %Y'}}</small></p>
-<p class="meta"><small>{{page.categories}</small></p>
+<p class="meta">
+    <small>{{page.date | date: '%B %d, %Y'}}</small><br>
+    <small>{{page.categories}</small>
+</p>
 
 {{content}}
 
