--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -29,7 +29,7 @@
         <footer>
             <div class="links">
                 <a href="{{site.baseurl}}/about/">About</a>
-                <a href="{{site.baseurl}}/archives/">archives</a>
+                <a href="{{site.baseurl}}/Categories/">Categories</a>
                 <a class="theme" onclick="theme()">Dark/Light</a>
             </div>
             <p class="copy">
