--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -5,7 +5,7 @@
 @charset "utf-8";
 
 $base-font-family: 'Work Sans', sans-serif;
-$base-font-size:   16px;
+$base-font-size:   14px;
 $base-font-weight: 400;
 $small-font-size:  $base-font-size * 0.875;
 $base-line-height: 1.7;
@@ -14,7 +14,7 @@ $spacing-unit:     30px;
 
 $text-color:       #333;
 $background-color: #fdfdfd;
-$brand-color:      #24D4DD;
+$brand-color:      #3cd6d6;
 
 $grey-color:       #828282;
 $grey-color-light: lighten($grey-color, 40%);
